Add unused declaration analysis, improve readability